--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "webpage",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://weirdrubberduck.github.io",
   "type": "module",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
@@ -12,6 +15,7 @@
   "dependencies": {
     "@mantine/core": "^8.2.3",
     "@mantine/hooks": "^8.2.3",
+    "gh-pages": "^6.3.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
